Add plugin reload command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,12 +8,16 @@ commands:
     description: See PvPLogger help page.
     aliases: [pvpl]
     permission: pvplogger.help
+  pvplogger reload:
+    description: Reloads PvPLogger.
+    aliases: [pvpr]
+    permission: pvplogger.reload
 
 permissions:
   pvplogger.*:
     description: Gives access to all PvPLogger permissions.
     children:
-      pvplogger.help: true
-  pvplogger.help:
-    description: See PvPLogger help page.
+      pvplogger.reload: true
+  pvplogger.reload:
+    description: Reloads PvPLogger.
     default: op
