--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,3 +3,6 @@ log-damage: true
 
 # Outputs extra information into the console. (Warning: creates large files very quickly)
 debug: false
+
+# Outputs in the following formats: flatfile, json
+output-format: flatfile
