--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,5 +4,5 @@ log-damage: true
 # Outputs extra information into the console. (Warning: creates large files very quickly)
 debug: false
 
-# Outputs in the following formats: flatfile, json
-output-format: flatfile
+# Outputs in the following formats: json
+output-format: json
